--- a/weitaixin/src/main/res/layout/fragment_record.xml
+++ b/weitaixin/src/main/res/layout/fragment_record.xml
@@ -191,6 +191,7 @@
         android:layout_marginTop="13dp"
         android:cacheColorHint="#00000000"
         android:divider="@null"
+        android:listSelector="#55FFFFFF"
         android:dividerHeight="13dp"
         android:fadingEdge="none"
         android:fastScrollEnabled="false"
