--- a/weitaixin/src/main/res/drawable/corner_background_green0.xml
+++ b/weitaixin/src/main/res/drawable/corner_background_green0.xml
@@ -4,6 +4,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/gray16" />
+        android:color="@color/green0" />
 
 </shape>
