--- a/weitaixin/src/main/res/values/colors.xml
+++ b/weitaixin/src/main/res/values/colors.xml
@@ -23,18 +23,24 @@
     <color name="gray12">#FF636363</color>
     <color name="gray13">#FFF2F2F2</color>
     <color name="gray14">#FFBDBDBD</color>
+    <color name="gray15">#FFEDEDED</color>
+    <color name="gray16">#FF979797</color>
     <color name="text_color_hint">#FFC5C7C7</color>
     <color name="black0">#FF222222</color>
     <color name="black1">#FF000000</color>
     <color name="black2">#FF353330</color>
+    <color name="black3">#FF2E2E2E</color>
     <color name="red0">#FFFE0058</color>
     <color name="red1">#FFea5550</color>
+    <color name="red2">#FFee4f4e</color>
+    <color name="red3">#FFFE2E62</color>
     <!--主色调-->
     <color name="green0">#FF01CF97</color>
     <color name="green1">#FF24AA42</color>
     <color name="green2">#FF3AD9AE</color>
     <color name="green3">#FF01CF97</color>
     <color name="green4">#FFE9fffA</color>
+    <color name="green5">#FF63E1DF</color>
     <!--background-->
     <color name="background_white">@color/white0</color>
     <color name="background_gray">@color/gray6</color>
