--- a/weitaixin/src/main/res/drawable/shape_send_verifycode.xml
+++ b/weitaixin/src/main/res/drawable/shape_send_verifycode.xml
@@ -3,6 +3,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/button_login"/>
+        android:color="@color/gray1"/>
 
 </shape>
