--- a/weitaixin/src/main/res/layout/activity_login_sms_auth_code.xml
+++ b/weitaixin/src/main/res/layout/activity_login_sms_auth_code.xml
@@ -62,7 +62,7 @@
             android:gravity="center"
             android:singleLine="true"
             android:text="发送验证码"
-            android:textColor="@color/button_login"
+            android:textColor="@color/black0"
             android:textSize="@dimen/font_normal"/>
     </LinearLayout>
 
