--- a/weitaixin/src/main/res/layout/activity_regist.xml
+++ b/weitaixin/src/main/res/layout/activity_regist.xml
@@ -52,8 +52,8 @@
 
         <CheckBox
             android:id="@+id/ivShowPassword"
-            android:layout_width="36dp"
-            android:layout_height="20dp"
+            android:layout_width="30dp"
+            android:layout_height="17dp"
             android:layout_gravity="right|center_vertical"
             android:layout_marginRight="20dp"
             android:background="@drawable/eye_selector"
@@ -95,7 +95,7 @@
             android:gravity="center"
             android:singleLine="true"
             android:text="发送验证码"
-            android:textColor="@color/button_login"
+            android:textColor="@color/black0"
             android:textSize="@dimen/font_normal"/>
     </LinearLayout>
 
