--- a/weitaixin/src/main/res/layout/view_grade_dialog.xml
+++ b/weitaixin/src/main/res/layout/view_grade_dialog.xml
@@ -103,7 +103,9 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="26dp"
-        android:background="@drawable/circle_graded"
+        android:background="@drawable/grade_num"
         android:gravity="center"
-        android:textSize="@dimen/font18"/>
+        android:textColor="@color/white0"
+        android:text="01"
+        android:textSize="@dimen/font30"/>
 </FrameLayout>
