修改 上传设置 button UI

--- a/weitaixin/src/main/res/layout/activity_set_system_upload.xml
+++ b/weitaixin/src/main/res/layout/activity_set_system_upload.xml
@@ -27,16 +27,14 @@
             android:textColor="@drawable/text_color_hei_selector"
             android:textSize="@dimen/font_normal"/>
 
-        <cn.ihealthbaby.weitaixin.ui.widget.SlideSwitchView
+        <ImageView
             android:id="@+id/slide_switch_upload"
             android:layout_width="48dip"
             android:layout_height="30dip"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="22dp"
-            slideswitch:isOpen="true"
             android:layout_centerVertical="true"
-            slideswitch:shape="circle"
-            slideswitch:themeColor="@color/green0"/>
+            android:layout_marginRight="22dp"
+            android:src="@drawable/switch_on"/>
     </RelativeLayout>
 
 
