修改 系统设置-修改密码 UI

--- a/weitaixin/src/main/res/layout/activity_reset_password.xml
+++ b/weitaixin/src/main/res/layout/activity_reset_password.xml
@@ -44,8 +44,8 @@
 
         <CheckBox
             android:id="@+id/ivShowPassword"
-            android:layout_width="40dp"
-            android:layout_height="20dp"
+            android:layout_width="30dp"
+            android:layout_height="17dp"
             android:layout_gravity="right|center_vertical"
             android:layout_marginRight="20dp"
             android:background="@drawable/eye_selector"
@@ -82,12 +82,12 @@
             android:layout_width="120dp"
             android:layout_height="53dp"
             android:layout_gravity="center_vertical"
-            android:background="@drawable/frame_selector"
+            android:background="@drawable/shape_send_verifycode"
             android:gravity="center"
             android:padding="14dp"
             android:singleLine="true"
             android:text="发送验证码"
-            android:textColor="@color/button_login"
+            android:textColor="@color/black0"
             android:textSize="@dimen/font_normal"/>
     </LinearLayout>
 
