--- a/weitaixin/src/main/res/layout/activity_pay_confirm_order.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_confirm_order.xml
@@ -11,32 +11,23 @@
     <RelativeLayout
         android:id="@+id/rl1Function"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/head_title_id"
         android:layout_marginTop="2dp"
-        android:background="@color/white0">
+        android:background="@color/white0"
+        android:paddingBottom="12dp"
+        android:paddingTop="12dp">
 
         <TextView
             android:id="@+id/tv1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="18dp"
-            android:layout_marginTop="14dp"
             android:gravity="center"
             android:text="订单商品:"
             android:textColor="@color/gray12"
             android:textSize="@dimen/font10" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv1"
-            android:layout_marginLeft="18dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="订单号码:"
-            android:textColor="@color/gray12"
-            android:textSize="@dimen/font10" />
 
         <TextView
             android:id="@+id/tvOrderGoods"
@@ -44,25 +35,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="14dp"
             android:gravity="center"
-            android:text="的三分所发生的撒大辅导费的撒"
+            android:text="开通微胎心监护租凭服务"
             android:textColor="@color/font_color"
             android:textSize="@dimen/font12" />
 
-        <TextView
-            android:id="@+id/tvOrderGoodsNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/tv1"
-            android:layout_marginLeft="18dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="243243224"
-            android:textColor="@color/gray12"
-            android:textSize="@dimen/font10" />
 
     </RelativeLayout>
 
@@ -79,14 +56,14 @@
         android:textSize="@dimen/font10" />
 
     <RelativeLayout
-        android:id="@+id/rl3Function"
+        android:id="@+id/rlExpressageAction"
         android:layout_width="match_parent"
         android:layout_height="34dp"
         android:layout_below="@id/tv2"
         android:background="@color/white0">
 
         <ImageView
-            android:id="@+id/iv1"
+            android:id="@+id/ivExpressageAction"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_centerVertical="true"
@@ -99,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@id/iv1"
+            android:layout_toRightOf="@id/ivExpressageAction"
             android:text="快递方式"
             android:textColor="@color/black0"
             android:textSize="@dimen/font10" />
@@ -108,28 +85,28 @@
 
 
     <RelativeLayout
-        android:id="@+id/rl4Function"
+        android:id="@+id/rlHospitalAction"
         android:layout_width="match_parent"
         android:layout_height="34dp"
-        android:layout_below="@id/rl3Function"
+        android:layout_below="@id/rlExpressageAction"
         android:layout_marginTop="2dp"
         android:background="@color/white0">
 
         <ImageView
-            android:id="@+id/iv2"
+            android:id="@+id/ivHospitalAction"
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="18dp"
             android:scaleType="fitXY"
-            android:src="@drawable/pay_choose" />
+            android:src="@drawable/pay_choose_un" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@id/iv2"
+            android:layout_toRightOf="@id/ivHospitalAction"
             android:text="医院自取"
             android:textColor="@color/black0"
             android:textSize="@dimen/font10" />
@@ -141,67 +118,68 @@
         android:id="@+id/rl5Function"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rl4Function"
+        android:layout_below="@id/rlHospitalAction"
         android:layout_marginTop="12dp"
         android:background="@color/white0">
 
         <RelativeLayout
+            android:id="@+id/rlHospitalGet"
             android:layout_width="match_parent"
-            android:visibility="visible"
+            android:layout_height="wrap_content"
             android:background="@color/white0"
-            android:layout_height="wrap_content">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/tv1None"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="12dp"
                 android:text="选择医院"
                 android:textColor="@color/gray12"
                 android:textSize="@dimen/font10" />
 
             <TextView
-                android:id="@+id/tv2None"
-                android:layout_below="@id/tv1None"
+                android:id="@+id/tv22None"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_below="@id/tv1None"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="12dp"
                 android:text="所选医生"
                 android:textColor="@color/gray12"
                 android:textSize="@dimen/font10" />
 
             <TextView
-                android:layout_below="@id/tv2None"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="9dp"
-                android:layout_marginBottom="12dp"
+                android:layout_below="@id/tv22None"
+                android:paddingBottom="12dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginTop="9dp"
                 android:text="*请付款后到该医院领取设备，开通服务"
-                android:textColor="@color/gray12"
+                android:textColor="@color/gray4"
                 android:textSize="@dimen/font10" />
 
             <TextView
                 android:id="@+id/tvHospitalName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="20dp"
+                android:layout_marginTop="12dp"
                 android:text="北京海淀区医院"
                 android:textColor="@color/gray12"
                 android:textSize="@dimen/font10" />
 
             <TextView
                 android:id="@+id/tvDoctorName"
-                android:layout_below="@id/tv1None"
                 android:layout_width="wrap_content"
-                android:layout_alignParentRight="true"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/tv1None"
                 android:layout_marginRight="20dp"
+                android:layout_marginTop="12dp"
                 android:text="历史大"
                 android:textColor="@color/gray12"
                 android:textSize="@dimen/font10" />
@@ -209,9 +187,10 @@
 
 
         <RelativeLayout
+            android:id="@+id/rlNoneGet"
             android:layout_width="match_parent"
-            android:visibility="gone"
-            android:layout_height="34dp">
+            android:layout_height="34dp"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -235,16 +214,17 @@
 
 
         <RelativeLayout
+            android:id="@+id/rlExpressageGet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:background="@color/white0"
             android:paddingBottom="12dp"
             android:paddingLeft="20dp"
-            android:background="@color/white0">
+            android:visibility="gone">
 
 
             <LinearLayout
-                android:id="@+id/llOneFunction"
+                android:id="@+id/llOne1Function"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
@@ -271,8 +251,8 @@
             <LinearLayout
                 android:id="@+id/llTwoFunction"
                 android:layout_width="match_parent"
+                android:layout_below="@id/llOne1Function"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/llOneFunction"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
@@ -334,15 +314,17 @@
 
 
     <RelativeLayout
-        android:layout_above="@+id/rl10Function"
         android:id="@+id/rl6Function"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/rl10Function"
         android:layout_below="@id/rl5Function"
         android:layout_marginTop="12dp"
-        android:background="@color/white0">
+        android:background="@color/white0"
+        android:paddingBottom="12dp">
 
         <TextView
+            android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -352,10 +334,16 @@
             android:textSize="@dimen/font12" />
 
         <ListView
+            android:id="@+id/lvGoodsList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="4dp" />
 
-        </ListView>
     </RelativeLayout>
 
 
@@ -368,6 +356,7 @@
         android:background="@color/white0">
 
         <TextView
+            android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -384,7 +373,7 @@
             android:layout_marginRight="12dp"
             android:background="@color/red0"
             android:gravity="center"
-            android:text="总计￥3424"
+            android:text="提交订单"
             android:textColor="@color/white0"
             android:textSize="@dimen/font12" />
 
