--- a/weitaixin/src/main/res/layout/activity_pay_order_information.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_order_information.xml
@@ -80,7 +80,7 @@
 
 
         <LinearLayout
-            android:id="@+id/llOneFunction"
+            android:id="@+id/llOne1Function"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
@@ -108,7 +108,7 @@
             android:id="@+id/llTwoFunction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/llOneFunction"
+            android:layout_below="@id/llOne1Function"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
