--- a/weitaixin/src/main/res/layout/item_pay_cashpledge_product.xml
+++ b/weitaixin/src/main/res/layout/item_pay_cashpledge_product.xml
@@ -4,29 +4,30 @@
     android:layout_height="wrap_content"
     android:background="@color/white0">
 
+
     <TextView
-        android:id="@+id/tvHospitalName"
+        android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="20dp"
-        android:gravity="center"
+        android:layout_marginLeft="26dp"
         android:paddingBottom="20dp"
         android:paddingTop="20dp"
-        android:text="大撒旦医院"
-        android:textColor="@color/black3"
+        android:text="【待收货】"
+        android:textColor="@color/font_color"
         android:textSize="@dimen/font12" />
 
-    <ImageView
-        android:id="@+id/ivHospitalImage"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
+
+    <TextView
+        android:id="@+id/tvPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/pay_choose" />
+        android:layout_marginRight="26dp"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp"
+        android:text="￥2343"
+        android:textColor="@color/red0"
+        android:textSize="@dimen/font12" />
 
 </RelativeLayout>
