--- a/weitaixin/src/main/res/layout/fragment_record.xml
+++ b/weitaixin/src/main/res/layout/fragment_record.xml
@@ -19,14 +19,35 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <cn.ihealthbaby.weitaixin.ui.widget.RoundImageView
-            android:id="@+id/ivWoHeadIcon"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="27dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/camera_icon"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <cn.ihealthbaby.weitaixin.ui.widget.RoundImageView
+                android:id="@+id/ivWoHeadIcon"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="27dp"
+                android:layout_marginTop="17dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/camera_icon"/>
+
+            <ImageView
+                android:layout_width="5dp"
+                android:layout_height="5dp"
+                android:layout_marginLeft="47dp"
+                android:layout_marginTop="9dp"
+                android:src="@drawable/upload_item_bg"/>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="49dp"
+                android:background="@color/green0"/>
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -189,7 +210,6 @@
         android:layout_below="@id/rl_first_position"
         android:cacheColorHint="#00000000"
         android:divider="@null"
-        android:dividerHeight="13dp"
         android:fadingEdge="none"
         android:fastScrollEnabled="false"
         android:footerDividersEnabled="false"
