--- a/weitaixin/src/main/res/layout/item_record.xml
+++ b/weitaixin/src/main/res/layout/item_record.xml
@@ -116,14 +116,21 @@
                     android:textColor="@color/gray3"
                     android:textSize="@dimen/font_normal"/>
 
-                <TextView
-                    android:id="@+id/tvAdviceStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="33dp"
+                <ImageView
+                    android:layout_width="34dp"
+                    android:layout_height="34dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="22dp"
-                    android:background="@drawable/recode_half_circle"
+                    android:layout_marginRight="45dp"
+                    android:src="@drawable/upload_item_bg"/>
+
+                <TextView
+                    android:id="@+id/tvAdviceStatus"
+                    android:layout_width="80dp"
+                    android:layout_height="36dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/bg_ask_doctor"
                     android:gravity="center"
                     android:text="问医生"
                     android:textColor="@drawable/text_color_selector"/>
